# ocado_recruitment_task

./: .gitignore
part_1/: main.py  requirements.txt
part_2/: README.md  compose.yaml
part_2/api/: Dockerfile  pyproject.toml
part_2/api/src/: config.py  debts.py  logging.yml  main.py
part_2/api/test/: conftest.py  test_api_flow.py
part_2/api/test/data/: debts.csv
part_2/worker/: Dockerfile  config.env  pyproject.toml
part_2/worker/src/: algorithm.py  aws.py  config.py  main.py
test_data/: debts.csv  debts_2.csv  output.csv  results_1.csv  results_2.csv
