[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []

packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"

boto3 = "^1.34.66"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
pyyaml = "^6.0.1"
uvicorn = "^0.28.0"
uvloop = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
boto3-stubs = { version = "^1.34.66", extras = ["s3", "sqs"] }
isort = "^5.13.2"
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
moto = { version = "^5.0.4", extras = ["s3", "sqs"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
log_cli = true
log_cli_level = "INFO"

[tool.isort]
known_first_party = "src"
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
